@@ -2,6 +2,8 @@ Nutch Change Log
 
 Release 1.4 - Current development
 
+* NUTCH-993 NullPointerException at FetcherOutputFormat.checkOutputSpecs (Christian Guegi via jnioche)
+
 * NUTCH-1013 Migrate RegexURLNormalizer from Apache ORO to java.util.regex (markus)
 
 * NUTCH-1016 Strip UTF-8 non-character codepoints and add logging for SolrWriter (markus)
